fix spacing between main entries

--- a/style.css
+++ b/style.css
@@ -58,7 +58,7 @@
 }
 
 .individual-element {
-  padding: 5%;
+  padding: 4% 5% 4% 5%;
 }
 
 
